Launchpad automatic translations update.

--- a/po/stellarium/zh_CN.po
+++ b/po/stellarium/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-24 19:14+0700\n"
-"PO-Revision-Date: 2012-11-05 05:43+0000\n"
-"Last-Translator: 罗佳伟 <luojiaweil@gmail.com>\n"
+"PO-Revision-Date: 2012-12-10 12:09+0000\n"
+"Last-Translator: Eddy Xiao <xyy82148@yahoo.com.cn>\n"
 "Language-Team: Chinese (Hong Kong) <zh_HK@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-25 05:22+0000\n"
-"X-Generator: Launchpad (build 16293)\n"
+"X-Launchpad-Export-Date: 2012-12-11 04:44+0000\n"
+"X-Generator: Launchpad (build 16356)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -1416,7 +1416,7 @@ msgstr "就在火星食太阳之前，火卫一从火星后面赶上并先行挡
 
 #: src/translations.h:241
 msgid "Phobos eclipsing the Sun as seen from Olympus Mons on Jan 10, 2068."
-msgstr ""
+msgstr "从奥林匹斯山上看火卫一2068年 1月10日的日蚀"
 
 #: src/translations.h:242
 msgid ""
@@ -1424,6 +1424,7 @@ msgid ""
 "occultations of both on the same day are very rare. Here's one that takes "
 "place 1/23/2048. In real speed."
 msgstr ""
+"在火星上，火卫一时常遮掩地球或木星（掩星），但在一天之内遮掩到它们两个的情况就非常罕见了。这里是其中的一次，2048年 1月23日，真实时间速度播放。"
 
 #: src/translations.h:243
 msgid ""
@@ -1440,20 +1441,20 @@ msgstr "太阳系中众多天象组成的屏幕保护程序。一共有171个不
 
 #: src/translations.h:245
 msgid "A tour of the western constellations."
-msgstr ""
+msgstr "西方星座游览"
 
 #: src/translations.h:246
 msgid "Look at the Sun from big planets of Solar System and Pluto."
-msgstr ""
+msgstr "从太阳系的各大行星（以及冥王星）观看太阳"
 
 #: src/translations.h:247
 msgid ""
 "Best views of Earth from other Solar System bodies in the 21st Century."
-msgstr ""
+msgstr "21世纪中从其它太阳系天体观看地球的最佳角度"
 
 #: src/translations.h:248
 msgid "Transit of Venus as seen from Sydney Australia, 6th June 2012."
-msgstr ""
+msgstr "金星凌日，2012年6月6日，澳大利亚悉尼"
 
 #: src/translations.h:249
 msgid ""
@@ -1465,7 +1466,7 @@ msgstr ""
 msgid ""
 "Flash of the supernova observed by Tycho Brahe in 1572. The Supernovae "
 "plugin has to be enabled."
-msgstr ""
+msgstr "第谷·布拉赫1572年观测到的超新星爆发。需启用超新星插件。"
 
 #: src/translations.h:255
 msgid "Andorra"
@@ -6453,15 +6454,15 @@ msgstr ""
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:264
 msgid "Enable display of distribution for exoplanets"
-msgstr ""
+msgstr "显示太阳系外行星的分布"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:266
 msgid "Display exoplanets since their discovery"
-msgstr ""
+msgstr "在该太阳系外行星被发现之后显示"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:268
 msgid "Enable timeline discovery of exoplanets"
-msgstr ""
+msgstr "启用太阳系外行星发现的时间线"
 
 #: plugins/Observability/src/Observability.cpp:66
 msgid "Observability analysis"
