--- a/po/stellarium-skycultures/zh_CN.po
+++ b/po/stellarium-skycultures/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-10-31 05:22+0000\n"
-"Last-Translator: 罗佳伟 <luojiaweil@gmail.com>\n"
+"PO-Revision-Date: 2012-12-10 12:45+0000\n"
+"Last-Translator: Eddy Xiao <xyy82148@yahoo.com.cn>\n"
 "Language-Team: Chinese (China) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-21 04:46+0000\n"
-"X-Generator: Launchpad (build 16293)\n"
+"X-Launchpad-Export-Date: 2012-12-11 04:44+0000\n"
+"X-Generator: Launchpad (build 16356)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -31,7 +31,7 @@ msgstr "巴纳德星系"
 
 #: nebulae/default/ngc2000names.dat:116
 msgid "Bear's Paw galaxy"
-msgstr ""
+msgstr "熊掌星系"
 
 #: nebulae/default/ngc2000names.dat:117
 msgid "Beehive cluster"
@@ -382,31 +382,31 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:226
 msgid "Cat's Paw nebula"
-msgstr ""
+msgstr "猫掌星云"
 
 #: nebulae/default/ngc2000names.dat:227
 msgid "War and Peace nebula"
-msgstr ""
+msgstr "战争与和平星云"
 
 #: nebulae/default/ngc2000names.dat:228
 msgid "Little Ghost nebula"
-msgstr ""
+msgstr "小幽灵星云"
 
 #: nebulae/default/ngc2000names.dat:229
 msgid "Little Gem nebula"
-msgstr ""
+msgstr "小宝石星云"
 
 #: nebulae/default/ngc2000names.dat:230
 msgid "Perseus A"
-msgstr ""
+msgstr "英仙座 A"
 
 #: nebulae/default/ngc2000names.dat:231
 msgid "Fornax A"
-msgstr ""
+msgstr "天炉座 A"
 
 #: nebulae/default/ngc2000names.dat:232
 msgid "Fornax B"
-msgstr ""
+msgstr "天炉座 B"
 
 #: nebulae/default/ngc2000names.dat:233
 msgid "de Mairan's nebula"
@@ -414,7 +414,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:234
 msgid "Flame nebula"
-msgstr ""
+msgstr "火焰星云"
 
 #: nebulae/default/ngc2000names.dat:235
 msgid "Satellite cluster"
@@ -422,7 +422,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:236
 msgid "Thor's Helmet"
-msgstr ""
+msgstr "雷神的头盔"
 
 #: nebulae/default/ngc2000names.dat:237
 msgid "Caroline's cluster"
@@ -434,23 +434,23 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:239
 msgid "Pencil nebula"
-msgstr ""
+msgstr "铅笔星云"
 
 #: nebulae/default/ngc2000names.dat:240
 msgid "Supernova Factory"
-msgstr ""
+msgstr "超新星工厂"
 
 #: nebulae/default/ngc2000names.dat:241
 msgid "Galaxy cluster"
-msgstr ""
+msgstr "星系团"
 
 #: nebulae/default/ngc2000names.dat:242
 msgid "Southern Pinwheel galaxy"
-msgstr ""
+msgstr "南风车星系"
 
 #: nebulae/default/ngc2000names.dat:243
 msgid "Pinwheel galaxy"
-msgstr ""
+msgstr "风车星系"
 
 #: nebulae/default/ngc2000names.dat:244
 msgid "Atoms for Peace galaxy"
