--- a/po/stellarium/is.po
+++ b/po/stellarium/is.po
@@ -11,14 +11,14 @@ msgstr ""
 "Project-Id-Version: 20120325-po_stellarium_stellarium-is\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-24 19:14+0700\n"
-"PO-Revision-Date: 2012-06-22 15:05+0000\n"
-"Last-Translator: Sverrir Gudmundsson <Unknown>\n"
+"PO-Revision-Date: 2012-12-13 07:43+0000\n"
+"Last-Translator: Sveinn í Felli <sveinki@nett.is>\n"
 "Language-Team: Icelandic <is@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-25 05:16+0000\n"
-"X-Generator: Launchpad (build 16293)\n"
+"X-Launchpad-Export-Date: 2012-12-14 05:13+0000\n"
+"X-Generator: Launchpad (build 16369)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -827,7 +827,7 @@ msgstr "Harvard háskóli (BNA)"
 
 #: src/gui/ShortcutsDialog.cpp:499
 msgid "Action"
-msgstr ""
+msgstr "Aðgerð"
 
 #: src/gui/ShortcutsDialog.cpp:500 src/ui_shortcutsDialog.h:198
 msgid "Primary shortcut"
