--- a/po/stellarium-skycultures/ta.po
+++ b/po/stellarium-skycultures/ta.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-11-20 09:48+0700\n"
-"PO-Revision-Date: 2012-02-28 18:42+0000\n"
-"Last-Translator: Balaji பாலாஜி <Unknown>\n"
+"PO-Revision-Date: 2012-12-14 19:10+0000\n"
+"Last-Translator: Dhamu <Unknown>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-21 04:44+0000\n"
-"X-Generator: Launchpad (build 16293)\n"
+"X-Launchpad-Export-Date: 2012-12-15 04:40+0000\n"
+"X-Generator: Launchpad (build 16372)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -5034,7 +5034,7 @@ msgstr ""
 
 #: skycultures/western/star_names.fab:221
 msgid "Situla"
-msgstr ""
+msgstr "ஸ்டுலா"
 
 #: skycultures/western/star_names.fab:222
 msgid "Homan"
@@ -5070,4 +5070,4 @@ msgstr "மார்காப்"
 
 #: skycultures/western/star_names.fab:230
 msgid "Errai"
-msgstr ""
+msgstr "இராய்"
