--- a/po/stellarium/ml.po
+++ b/po/stellarium/ml.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-17 22:19+0700\n"
-"PO-Revision-Date: 2012-11-08 21:20+0000\n"
-"Last-Translator: Raziman T V <razimantv@gmail.com>\n"
+"PO-Revision-Date: 2012-12-20 17:38+0000\n"
+"Last-Translator: Noble P Abraham <Unknown>\n"
 "Language-Team: Malayalam <ml@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-18 04:50+0000\n"
-"X-Generator: Launchpad (build 16372)\n"
+"X-Launchpad-Export-Date: 2012-12-21 04:36+0000\n"
+"X-Generator: Launchpad (build 16378)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -1320,7 +1320,7 @@ msgstr ""
 #. TRANSLATORS: Name of script
 #: src/translations.h:200
 msgid "Zodiac"
-msgstr ""
+msgstr "രാശിചക്രം"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:202
@@ -2463,7 +2463,7 @@ msgstr "1 സൈഡീരിയല്‍ ദിവസം കൂട്ടുക"
 
 #: src/translations.h:504
 msgid "Add 1 sidereal month"
-msgstr ""
+msgstr "1 നാക്ഷത്രമാസം കൂട്ടുക"
 
 #: src/translations.h:505
 msgid "Add 1 sidereal week"
@@ -2471,7 +2471,7 @@ msgstr "1 സൈഡീരിയല്‍ ആഴ്ച കൂട്ടുക"
 
 #: src/translations.h:506
 msgid "Add 1 sidereal year"
-msgstr ""
+msgstr "1 നാക്ഷത്രവർഷം കൂട്ടുക"
 
 #: src/translations.h:507
 msgid "Add 1 solar day"
@@ -2487,7 +2487,7 @@ msgstr "1 സൗരആഴ്ച കൂട്ടുക"
 
 #: src/translations.h:510
 msgid "Add 1 synodic month"
-msgstr ""
+msgstr "1 സാവനമാസം കൂട്ടുക"
 
 #: src/translations.h:511
 msgid "Add 1 draconic month"
