--- a/po/stellarium/ar.po
+++ b/po/stellarium/ar.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-27 20:16+0700\n"
-"PO-Revision-Date: 2012-12-05 01:39+0000\n"
+"PO-Revision-Date: 2012-12-28 19:06+0000\n"
 "Last-Translator: Khalid AlAjaji <Unknown>\n"
 "Language-Team: Arabic <ar@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-28 04:37+0000\n"
+"X-Launchpad-Export-Date: 2012-12-29 04:38+0000\n"
 "X-Generator: Launchpad (build 16378)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -2507,7 +2507,7 @@ msgstr "أضف سنة نجمية واحدة"
 
 #: src/translations.h:507
 msgid "Add 1 sidereal century"
-msgstr ""
+msgstr "أضف قرناً نجمياً"
 
 #: src/translations.h:508
 msgid "Add 1 solar day"
@@ -2547,7 +2547,7 @@ msgstr "أضف سنة استوائية متوسطة واحدة"
 
 #: src/translations.h:517
 msgid "Add 1 mean tropical century"
-msgstr ""
+msgstr "أضف قرناً استوائياً متوسطاً"
 
 #: src/translations.h:518
 msgid "Slow down the script execution rate"
@@ -2619,7 +2619,7 @@ msgstr "إطرح سنة نجمية واحدة"
 
 #: src/translations.h:535
 msgid "Subtract 1 sidereal century"
-msgstr ""
+msgstr "اطرح قرناً نجمياً"
 
 #: src/translations.h:536
 msgid "Subtract 1 solar day"
@@ -2659,7 +2659,7 @@ msgstr "اطرح سنة استوائية متوسطة واحدة"
 
 #: src/translations.h:545
 msgid "Subtract 1 mean tropical century"
-msgstr ""
+msgstr "اطرح قرناً استوائياً متوسطاً"
 
 #. TRANSLATORS: Keyboard action group name
 #: src/translations.h:548
