--- a/po/stellarium/fi.po
+++ b/po/stellarium/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-27 20:16+0700\n"
-"PO-Revision-Date: 2012-12-15 19:43+0000\n"
+"PO-Revision-Date: 2012-12-28 20:41+0000\n"
 "Last-Translator: Tuomas Teipainen <tmsteipainen1@gmail.com>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-28 04:40+0000\n"
+"X-Launchpad-Export-Date: 2012-12-29 04:38+0000\n"
 "X-Generator: Launchpad (build 16378)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -2518,7 +2518,7 @@ msgstr "Lisää sideerinen vuosi"
 
 #: src/translations.h:507
 msgid "Add 1 sidereal century"
-msgstr ""
+msgstr "Lisää 1 sideerinen vuosisata"
 
 #: src/translations.h:508
 msgid "Add 1 solar day"
@@ -2558,7 +2558,7 @@ msgstr "Lisää trooppinen vuosi"
 
 #: src/translations.h:517
 msgid "Add 1 mean tropical century"
-msgstr ""
+msgstr "Lisää 1 keskimääräinen trooppinen vuosisata"
 
 #: src/translations.h:518
 msgid "Slow down the script execution rate"
@@ -2630,7 +2630,7 @@ msgstr "Vähennä tähtivuosi"
 
 #: src/translations.h:535
 msgid "Subtract 1 sidereal century"
-msgstr ""
+msgstr "Vähennä 1 sideerinen vuosisata"
 
 #: src/translations.h:536
 msgid "Subtract 1 solar day"
@@ -2670,7 +2670,7 @@ msgstr "Vähennä trooppinen vuosi"
 
 #: src/translations.h:545
 msgid "Subtract 1 mean tropical century"
-msgstr ""
+msgstr "Vähennä 1 keskimääräinen trooppinen vuosisata"
 
 #. TRANSLATORS: Keyboard action group name
 #: src/translations.h:548
