--- a/po/stellarium/nb.po
+++ b/po/stellarium/nb.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-27 20:16+0700\n"
-"PO-Revision-Date: 2012-12-26 19:40+0000\n"
+"PO-Revision-Date: 2012-12-28 17:30+0000\n"
 "Last-Translator: FreewareTips <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-28 04:44+0000\n"
+"X-Launchpad-Export-Date: 2012-12-29 04:38+0000\n"
 "X-Generator: Launchpad (build 16378)\n"
 "X-Poedit-Country: NORWAY\n"
 "X-Poedit-Language: Norwegian\n"
@@ -2521,7 +2521,7 @@ msgstr "Legg til 1 siderisk år"
 
 #: src/translations.h:507
 msgid "Add 1 sidereal century"
-msgstr ""
+msgstr "Legg til 1 siderisk århundre"
 
 #: src/translations.h:508
 msgid "Add 1 solar day"
@@ -2561,7 +2561,7 @@ msgstr "Legg til 1 tropisk år"
 
 #: src/translations.h:517
 msgid "Add 1 mean tropical century"
-msgstr ""
+msgstr "Legg til 1 tropisk århundre"
 
 #: src/translations.h:518
 msgid "Slow down the script execution rate"
@@ -2633,7 +2633,7 @@ msgstr "Trekk fra 1 siderisk år"
 
 #: src/translations.h:535
 msgid "Subtract 1 sidereal century"
-msgstr ""
+msgstr "Trekk fra 1 siderisk århundre"
 
 #: src/translations.h:536
 msgid "Subtract 1 solar day"
@@ -2673,7 +2673,7 @@ msgstr "Trekk fra 1 tropisk år"
 
 #: src/translations.h:545
 msgid "Subtract 1 mean tropical century"
-msgstr ""
+msgstr "Trekk fra 1 tropisk århundre"
 
 #. TRANSLATORS: Keyboard action group name
 #: src/translations.h:548
