--- a/po/stellarium/ru.po
+++ b/po/stellarium/ru.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-27 20:16+0700\n"
-"PO-Revision-Date: 2012-11-24 12:34+0000\n"
+"PO-Revision-Date: 2012-12-28 05:03+0000\n"
 "Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-28 04:45+0000\n"
+"X-Launchpad-Export-Date: 2012-12-29 04:38+0000\n"
 "X-Generator: Launchpad (build 16378)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -2515,7 +2515,7 @@ msgstr "Добавить 1 звёздный год"
 
 #: src/translations.h:507
 msgid "Add 1 sidereal century"
-msgstr ""
+msgstr "Добавить 1 звёздное столетие"
 
 #: src/translations.h:508
 msgid "Add 1 solar day"
@@ -2555,7 +2555,7 @@ msgstr "Добавить средний тропический год"
 
 #: src/translations.h:517
 msgid "Add 1 mean tropical century"
-msgstr ""
+msgstr "Добавить 1 средее тропическое столетие"
 
 #: src/translations.h:518
 msgid "Slow down the script execution rate"
@@ -2627,7 +2627,7 @@ msgstr "Вычесть 1 звёздный год"
 
 #: src/translations.h:535
 msgid "Subtract 1 sidereal century"
-msgstr ""
+msgstr "Вычесть 1 звёздное столетие"
 
 #: src/translations.h:536
 msgid "Subtract 1 solar day"
@@ -2667,7 +2667,7 @@ msgstr "Вычесть средний тропический год"
 
 #: src/translations.h:545
 msgid "Subtract 1 mean tropical century"
-msgstr ""
+msgstr "Вычесть 1 средее тропическое столетие"
 
 #. TRANSLATORS: Keyboard action group name
 #: src/translations.h:548
