Launchpad automatic translations update.

--- a/po/stellarium/gl.po
+++ b/po/stellarium/gl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-27 20:16+0700\n"
-"PO-Revision-Date: 2012-11-15 00:05+0000\n"
+"PO-Revision-Date: 2012-12-30 13:54+0000\n"
 "Last-Translator: Manuel Rosales Graña <manuel.rosales@mundo-r.com>\n"
 "Language-Team: Galician <gl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-28 04:41+0000\n"
+"X-Launchpad-Export-Date: 2012-12-31 04:37+0000\n"
 "X-Generator: Launchpad (build 16378)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -2516,7 +2516,7 @@ msgstr "Engadir 1 ano sideral"
 
 #: src/translations.h:507
 msgid "Add 1 sidereal century"
-msgstr ""
+msgstr "Engadir 1 século sideral"
 
 #: src/translations.h:508
 msgid "Add 1 solar day"
@@ -2556,7 +2556,7 @@ msgstr "Engadir un ano semitropical"
 
 #: src/translations.h:517
 msgid "Add 1 mean tropical century"
-msgstr ""
+msgstr "Engadir 1 século tropical medio"
 
 #: src/translations.h:518
 msgid "Slow down the script execution rate"
@@ -2628,7 +2628,7 @@ msgstr "Restar 1 ano sideral"
 
 #: src/translations.h:535
 msgid "Subtract 1 sidereal century"
-msgstr ""
+msgstr "Restar 1 século sideral"
 
 #: src/translations.h:536
 msgid "Subtract 1 solar day"
@@ -2668,7 +2668,7 @@ msgstr "Restar 1 ano semitropical"
 
 #: src/translations.h:545
 msgid "Subtract 1 mean tropical century"
-msgstr ""
+msgstr "Restar 1 século tropical medio"
 
 #. TRANSLATORS: Keyboard action group name
 #: src/translations.h:548
@@ -6648,23 +6648,23 @@ msgstr "Actualizar os exoplanetas dende internet"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:260
 msgid "Display mode for exoplanets"
-msgstr ""
+msgstr "Visualizar en modo de exoplanetas"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:262
 msgid "Plot all systems with exoplanets without labels"
-msgstr ""
+msgstr "Debuxar todos os sistemas con exoplanetas e sen etiquetas"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:264
 msgid "Enable display of distribution for exoplanets"
-msgstr ""
+msgstr "Activar a visualización de distribución dos explanetas"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:266
 msgid "Display exoplanets since their discovery"
-msgstr ""
+msgstr "Visualizar exoplanetas dende o seu descubrimento"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:268
 msgid "Enable timeline discovery of exoplanets"
-msgstr ""
+msgstr "Activar liña de tempo de descubrimento de exoplanetas"
 
 #: plugins/Observability/src/Observability.cpp:66
 msgid "Observability analysis"
