--- a/po/stellarium-skycultures/bg.po
+++ b/po/stellarium-skycultures/bg.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-29 12:20+0700\n"
-"PO-Revision-Date: 2012-10-28 09:38+0000\n"
+"PO-Revision-Date: 2012-12-30 11:31+0000\n"
 "Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Bulgarian <bg@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-30 05:10+0000\n"
+"X-Launchpad-Export-Date: 2012-12-31 04:37+0000\n"
 "X-Generator: Launchpad (build 16378)\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -543,7 +543,7 @@ msgstr ""
 #: nebulae/default/ngc2000names.dat:266 nebulae/default/ngc2000names.dat:267
 #: nebulae/default/ngc2000names.dat:268 nebulae/default/ngc2000names.dat:269
 msgid "Grus Quartet"
-msgstr ""
+msgstr "Квартет Жерав"
 
 #: nebulae/default/ngc2000names.dat:270
 msgid "Heart nebula"
@@ -567,7 +567,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:275 nebulae/default/ngc2000names.dat:276
 msgid "Keenan's System"
-msgstr ""
+msgstr "Система на Кийнън"
 
 #: nebulae/default/ngc2000names.dat:277
 msgid "Kidney Bean galaxy"
@@ -584,7 +584,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:282
 msgid "Miniature Spiral"
-msgstr ""
+msgstr "Малка спирала"
 
 #: nebulae/default/ngc2000names.dat:283
 msgid "Mirach's Ghost"
