--- a/po/stellarium-skycultures/ja.po
+++ b/po/stellarium-skycultures/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-29 12:20+0700\n"
-"PO-Revision-Date: 2012-01-09 17:56+0000\n"
+"PO-Revision-Date: 2012-12-30 11:47+0000\n"
 "Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-30 05:13+0000\n"
+"X-Launchpad-Export-Date: 2012-12-31 04:37+0000\n"
 "X-Generator: Launchpad (build 16378)\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -92,7 +92,7 @@ msgstr "カリフォルニア星雲"
 
 #: nebulae/default/ngc2000names.dat:134
 msgid "Centaurus A"
-msgstr ""
+msgstr "ケンタウルス座 A (Centaurus A)"
 
 #: nebulae/default/ngc2000names.dat:135
 msgid "Christmas Tree cluster"
@@ -163,7 +163,7 @@ msgstr "ヘルクレス座大球状星団"
 
 #: nebulae/default/ngc2000names.dat:159
 msgid "Andromeda Galaxy"
-msgstr ""
+msgstr "アンドロメダ星雲 (Andromeda Galaxy)"
 
 #: nebulae/default/ngc2000names.dat:160
 msgid "Great Nebula in Orion"
@@ -259,11 +259,11 @@ msgstr "回転花火星雲"
 
 #: nebulae/default/ngc2000names.dat:185
 msgid "Polarissima Australis"
-msgstr ""
+msgstr "南極銀河"
 
 #: nebulae/default/ngc2000names.dat:186
 msgid "Polarissima Borealis"
-msgstr ""
+msgstr "北極銀河"
 
 #: nebulae/default/ngc2000names.dat:187
 msgid "Praesepe"
@@ -398,15 +398,15 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:230
 msgid "Perseus A"
-msgstr ""
+msgstr "ペルセウス座 A"
 
 #: nebulae/default/ngc2000names.dat:231
 msgid "Fornax A"
-msgstr ""
+msgstr "ろ座 A"
 
 #: nebulae/default/ngc2000names.dat:232
 msgid "Fornax B"
-msgstr ""
+msgstr "ろ座 B"
 
 #: nebulae/default/ngc2000names.dat:233
 msgid "de Mairan's nebula"
@@ -510,7 +510,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:258
 msgid "Cetus A"
-msgstr ""
+msgstr "くじら座 A"
 
 #: nebulae/default/ngc2000names.dat:259
 msgid "Cleopatra's Eye"
@@ -543,7 +543,7 @@ msgstr ""
 #: nebulae/default/ngc2000names.dat:266 nebulae/default/ngc2000names.dat:267
 #: nebulae/default/ngc2000names.dat:268 nebulae/default/ngc2000names.dat:269
 msgid "Grus Quartet"
-msgstr ""
+msgstr "つる座の四重星"
 
 #: nebulae/default/ngc2000names.dat:270
 msgid "Heart nebula"
@@ -567,7 +567,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:275 nebulae/default/ngc2000names.dat:276
 msgid "Keenan's System"
-msgstr ""
+msgstr "キーナンの系"
 
 #: nebulae/default/ngc2000names.dat:277
 msgid "Kidney Bean galaxy"
