--- a/po/stellarium-skycultures/nb.po
+++ b/po/stellarium-skycultures/nb.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-29 12:20+0700\n"
-"PO-Revision-Date: 2012-12-29 17:46+0000\n"
-"Last-Translator: FreewareTips <Unknown>\n"
+"PO-Revision-Date: 2012-12-30 11:14+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-30 05:14+0000\n"
+"X-Launchpad-Export-Date: 2012-12-31 04:38+0000\n"
 "X-Generator: Launchpad (build 16378)\n"
 "X-Poedit-Country: NORWAY\n"
 "X-Poedit-Language: Norwegian\n"
@@ -513,7 +513,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:258
 msgid "Cetus A"
-msgstr ""
+msgstr "Cetus A"
 
 #: nebulae/default/ngc2000names.dat:259
 msgid "Cleopatra's Eye"
