--- a/po/stellarium-skycultures/sv.po
+++ b/po/stellarium-skycultures/sv.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-29 12:20+0700\n"
-"PO-Revision-Date: 2012-10-28 09:26+0000\n"
+"PO-Revision-Date: 2012-12-30 12:02+0000\n"
 "Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-30 05:16+0000\n"
+"X-Launchpad-Export-Date: 2012-12-31 04:38+0000\n"
 "X-Generator: Launchpad (build 16378)\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -398,15 +398,15 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:230
 msgid "Perseus A"
-msgstr ""
+msgstr "Perseus A"
 
 #: nebulae/default/ngc2000names.dat:231
 msgid "Fornax A"
-msgstr ""
+msgstr "Ugnen A"
 
 #: nebulae/default/ngc2000names.dat:232
 msgid "Fornax B"
-msgstr ""
+msgstr "Ugnen B"
 
 #: nebulae/default/ngc2000names.dat:233
 msgid "de Mairan's nebula"
@@ -442,7 +442,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:241
 msgid "Galaxy cluster"
-msgstr ""
+msgstr "Galaxkluster"
 
 #: nebulae/default/ngc2000names.dat:242
 msgid "Southern Pinwheel galaxy"
@@ -510,7 +510,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:258
 msgid "Cetus A"
-msgstr ""
+msgstr "Cetus A"
 
 #: nebulae/default/ngc2000names.dat:259
 msgid "Cleopatra's Eye"
@@ -543,7 +543,7 @@ msgstr ""
 #: nebulae/default/ngc2000names.dat:266 nebulae/default/ngc2000names.dat:267
 #: nebulae/default/ngc2000names.dat:268 nebulae/default/ngc2000names.dat:269
 msgid "Grus Quartet"
-msgstr ""
+msgstr "Tranans kvartett"
 
 #: nebulae/default/ngc2000names.dat:270
 msgid "Heart nebula"
@@ -567,7 +567,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:275 nebulae/default/ngc2000names.dat:276
 msgid "Keenan's System"
-msgstr ""
+msgstr "Keenans system"
 
 #: nebulae/default/ngc2000names.dat:277
 msgid "Kidney Bean galaxy"
@@ -584,7 +584,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:282
 msgid "Miniature Spiral"
-msgstr ""
+msgstr "Miniatyrspiralen"
 
 #: nebulae/default/ngc2000names.dat:283
 msgid "Mirach's Ghost"
