--- a/po/stellarium-skycultures/th.po
+++ b/po/stellarium-skycultures/th.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: Thai for stellarium 0.8.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-29 12:20+0700\n"
-"PO-Revision-Date: 2012-09-09 04:48+0000\n"
-"Last-Translator: Worachate Boonplod <Unknown>\n"
+"PO-Revision-Date: 2012-12-30 11:23+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: MicKi Alone <Need24Get@msn.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-30 05:16+0000\n"
+"X-Launchpad-Export-Date: 2012-12-31 04:38+0000\n"
 "X-Generator: Launchpad (build 16378)\n"
 "X-Poedit-Country: THAILAND\n"
 "X-Poedit-Language: Thai\n"
@@ -444,7 +444,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:241
 msgid "Galaxy cluster"
-msgstr ""
+msgstr "กระจุกดาราจักร"
 
 #: nebulae/default/ngc2000names.dat:242
 msgid "Southern Pinwheel galaxy"
