--- a/po/stellarium-skycultures/zh_CN.po
+++ b/po/stellarium-skycultures/zh_CN.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-29 12:20+0700\n"
-"PO-Revision-Date: 2012-12-10 12:45+0000\n"
-"Last-Translator: Eddy Xiao <xyy82148@yahoo.com.cn>\n"
+"PO-Revision-Date: 2012-12-30 11:18+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Chinese (China) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-30 05:17+0000\n"
+"X-Launchpad-Export-Date: 2012-12-31 04:39+0000\n"
 "X-Generator: Launchpad (build 16378)\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -510,7 +510,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:258
 msgid "Cetus A"
-msgstr ""
+msgstr "鲸鱼座α星系"
 
 #: nebulae/default/ngc2000names.dat:259
 msgid "Cleopatra's Eye"
@@ -543,7 +543,7 @@ msgstr ""
 #: nebulae/default/ngc2000names.dat:266 nebulae/default/ngc2000names.dat:267
 #: nebulae/default/ngc2000names.dat:268 nebulae/default/ngc2000names.dat:269
 msgid "Grus Quartet"
-msgstr ""
+msgstr "天鹤座四重奏"
 
 #: nebulae/default/ngc2000names.dat:270
 msgid "Heart nebula"
@@ -567,7 +567,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:275 nebulae/default/ngc2000names.dat:276
 msgid "Keenan's System"
-msgstr ""
+msgstr "Keenan 系"
 
 #: nebulae/default/ngc2000names.dat:277
 msgid "Kidney Bean galaxy"
@@ -584,7 +584,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:282
 msgid "Miniature Spiral"
-msgstr ""
+msgstr "微螺旋星云"
 
 #: nebulae/default/ngc2000names.dat:283
 msgid "Mirach's Ghost"
