--- a/po/stellarium-skycultures/zh_TW.po
+++ b/po/stellarium-skycultures/zh_TW.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-29 12:20+0700\n"
-"PO-Revision-Date: 2012-10-21 23:09+0000\n"
-"Last-Translator: Bryan Nguyen <bryan.nguy@gmail.com>\n"
+"PO-Revision-Date: 2012-12-30 11:40+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Chinese (Taiwan) <zh_TW@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-30 05:17+0000\n"
+"X-Launchpad-Export-Date: 2012-12-31 04:39+0000\n"
 "X-Generator: Launchpad (build 16378)\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -92,7 +92,7 @@ msgstr "加利福尼亞星雲"
 
 #: nebulae/default/ngc2000names.dat:134
 msgid "Centaurus A"
-msgstr ""
+msgstr "半人馬 A"
 
 #: nebulae/default/ngc2000names.dat:135
 msgid "Christmas Tree cluster"
@@ -163,7 +163,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:159
 msgid "Andromeda Galaxy"
-msgstr ""
+msgstr "仙女座銀河"
 
 #: nebulae/default/ngc2000names.dat:160
 msgid "Great Nebula in Orion"
