Launchpad automatic translations update.

--- a/po/stellarium/zh_CN.po
+++ b/po/stellarium/zh_CN.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-27 20:16+0700\n"
-"PO-Revision-Date: 2012-12-10 12:09+0000\n"
-"Last-Translator: Eddy Xiao <xyy82148@yahoo.com.cn>\n"
+"PO-Revision-Date: 2012-12-31 14:24+0000\n"
+"Last-Translator: 罗佳伟 <luojiaweil@gmail.com>\n"
 "Language-Team: Chinese (Hong Kong) <zh_HK@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-28 04:48+0000\n"
+"X-Launchpad-Export-Date: 2013-01-01 04:44+0000\n"
 "X-Generator: Launchpad (build 16378)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -1460,7 +1460,7 @@ msgstr "金星凌日，2012年6月6日，澳大利亚悉尼"
 msgid ""
 "A demonstration of the analemma - the path of the Sun across the sky during "
 "the year."
-msgstr ""
+msgstr "日行迹演示 —— 一年当中每天同一时刻太阳所在位置描出的轨迹"
 
 #: src/translations.h:250
 msgid ""
@@ -2456,7 +2456,7 @@ msgstr "恒星年加1"
 
 #: src/translations.h:507
 msgid "Add 1 sidereal century"
-msgstr ""
+msgstr "增加1恒星世纪"
 
 #: src/translations.h:508
 msgid "Add 1 solar day"
@@ -2496,7 +2496,7 @@ msgstr "增加1平回归年"
 
 #: src/translations.h:517
 msgid "Add 1 mean tropical century"
-msgstr ""
+msgstr "增加1平回归世纪"
 
 #: src/translations.h:518
 msgid "Slow down the script execution rate"
@@ -2568,7 +2568,7 @@ msgstr "恒星年减1"
 
 #: src/translations.h:535
 msgid "Subtract 1 sidereal century"
-msgstr ""
+msgstr "减少1恒星世纪"
 
 #: src/translations.h:536
 msgid "Subtract 1 solar day"
@@ -2608,7 +2608,7 @@ msgstr "减少1平回归年"
 
 #: src/translations.h:545
 msgid "Subtract 1 mean tropical century"
-msgstr ""
+msgstr "减少1平回归世纪"
 
 #. TRANSLATORS: Keyboard action group name
 #: src/translations.h:548
@@ -6434,11 +6434,11 @@ msgstr "从互联网更新系外新星数据"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:260
 msgid "Display mode for exoplanets"
-msgstr ""
+msgstr "太阳系外行星的显示模式"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:262
 msgid "Plot all systems with exoplanets without labels"
-msgstr ""
+msgstr "不带标签地显示系外行星系"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:264
 msgid "Enable display of distribution for exoplanets"
