--- a/po/stellarium-skycultures/be.po
+++ b/po/stellarium-skycultures/be.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-29 12:20+0700\n"
-"PO-Revision-Date: 2012-12-27 16:30+0000\n"
+"PO-Revision-Date: 2012-12-31 19:39+0000\n"
 "Last-Translator: 375gnu <Unknown>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-30 05:10+0000\n"
+"X-Launchpad-Export-Date: 2013-01-01 04:44+0000\n"
 "X-Generator: Launchpad (build 16378)\n"
 "Language: be_BY\n"
 "X-Poedit-SourceCharset: utf-8\n"
@@ -468,157 +468,157 @@ msgstr "Туманнасьць «Галава малпы»"
 
 #: nebulae/default/ngc2000names.dat:247
 msgid "Lemon slice nebula"
-msgstr ""
+msgstr "Туманнасьць «Долька лімона»"
 
 #: nebulae/default/ngc2000names.dat:248
 msgid "Red spider nebula"
-msgstr ""
+msgstr "Туманнасьць «Чырвоны снайпэр»"
 
 #: nebulae/default/ngc2000names.dat:249
 msgid "Retina nebula"
-msgstr ""
+msgstr "Туманнасьць «Сятчатка»"
 
 #: nebulae/default/ngc2000names.dat:250
 msgid "Spirograph nebula"
-msgstr ""
+msgstr "Туманнасьць «Сьпіроґраф»"
 
 #: nebulae/default/ngc2000names.dat:251
 msgid "Spiral planetary nebula"
-msgstr ""
+msgstr "Плянэтарная туманнасьць «Сьпіраль»"
 
 #: nebulae/default/ngc2000names.dat:252
 msgid "20 Vulpeculae cluster"
-msgstr ""
+msgstr "Скопішча «20 Лісічкі»"
 
 #: nebulae/default/ngc2000names.dat:253
 msgid "Ambartsumian's Knot"
-msgstr ""
+msgstr "Вузел Амбарцумяна"
 
 #: nebulae/default/ngc2000names.dat:254
 msgid "Antares nebula"
-msgstr ""
+msgstr "Туманнасьць «Антарэс»"
 
 #: nebulae/default/ngc2000names.dat:255
 msgid "Auriga Salt-and-Pepper"
-msgstr ""
+msgstr "«Соль і перац» Возьніка"
 
 #: nebulae/default/ngc2000names.dat:256
 msgid "Baxendall's nebula"
-msgstr ""
+msgstr "Туманнасьць Баксэндала"
 
 #: nebulae/default/ngc2000names.dat:257
 msgid "Cassiopeia Salt-and-Pepper"
-msgstr ""
+msgstr "«Соль і перац» Касіяпэі"
 
 #: nebulae/default/ngc2000names.dat:258
 msgid "Cetus A"
-msgstr ""
+msgstr "Кіт А"
 
 #: nebulae/default/ngc2000names.dat:259
 msgid "Cleopatra's Eye"
-msgstr ""
+msgstr "Вока Клеапатры"
 
 #: nebulae/default/ngc2000names.dat:260
 msgid "Cooling Tower"
-msgstr ""
+msgstr "Ахаладжальная вежа"
 
 #: nebulae/default/ngc2000names.dat:261
 msgid "Crowbar galaxy"
-msgstr ""
+msgstr "Ґаляктыка «Лом»"
 
 #: nebulae/default/ngc2000names.dat:262
 msgid "Sagittarius Star Cloud"
-msgstr ""
+msgstr "Зоркавае воблака Стральца"
 
 #: nebulae/default/ngc2000names.dat:263
 msgid "Dragon nebula"
-msgstr ""
+msgstr "Туманнасьць «Дракон»"
 
 #: nebulae/default/ngc2000names.dat:264
 msgid "Dragonfly cluster"
-msgstr ""
+msgstr "Скопішча «Страказа»"
 
 #: nebulae/default/ngc2000names.dat:265
 msgid "Elephant Trunk"
-msgstr ""
+msgstr "Хобат слана"
 
 #: nebulae/default/ngc2000names.dat:266 nebulae/default/ngc2000names.dat:267
 #: nebulae/default/ngc2000names.dat:268 nebulae/default/ngc2000names.dat:269
 msgid "Grus Quartet"
-msgstr ""
+msgstr "Квартэт Жорава"
 
 #: nebulae/default/ngc2000names.dat:270
 msgid "Heart nebula"
-msgstr ""
+msgstr "Туманнасьць «Сэрца»"
 
 #: nebulae/default/ngc2000names.dat:271
 msgid "Heart-Shaped cluster"
-msgstr ""
+msgstr "Скопішча ў форме сэрца"
 
 #: nebulae/default/ngc2000names.dat:272
 msgid "Herring galaxy"
-msgstr ""
+msgstr "Ґаляктыка «Селядзец»"
 
 #: nebulae/default/ngc2000names.dat:273
 msgid "Hole in a cluster"
-msgstr ""
+msgstr "Дзірка ў скопішчы"
 
 #: nebulae/default/ngc2000names.dat:274
 msgid "Intergalactic Wanderer/Tramp"
-msgstr ""
+msgstr "Міжґаляктычны бадзяга"
 
 #: nebulae/default/ngc2000names.dat:275 nebulae/default/ngc2000names.dat:276
 msgid "Keenan's System"
-msgstr ""
+msgstr "Сыстэма Кінана"
 
 #: nebulae/default/ngc2000names.dat:277
 msgid "Kidney Bean galaxy"
-msgstr ""
+msgstr "Ґаляктыка «Фасоля»"
 
 #: nebulae/default/ngc2000names.dat:278 nebulae/default/ngc2000names.dat:279
 #: nebulae/default/ngc2000names.dat:280
 msgid "Leo Triplet"
-msgstr ""
+msgstr "Трыплет ільва"
 
 #: nebulae/default/ngc2000names.dat:281
 msgid "McLeish's Object"
-msgstr ""
+msgstr "Аб'ект Мак-Лейша"
 
 #: nebulae/default/ngc2000names.dat:282
 msgid "Miniature Spiral"
-msgstr ""
+msgstr "Мініяцюрная сьпіраль"
 
 #: nebulae/default/ngc2000names.dat:283
 msgid "Mirach's Ghost"
-msgstr ""
+msgstr "Прывід Міраха"
 
 #: nebulae/default/ngc2000names.dat:284
 msgid "Sailboat cluster"
-msgstr ""
+msgstr "Скопішча «Ветразьнік»"
 
 #: nebulae/default/ngc2000names.dat:285
 msgid "Seyfert's Sextet"
-msgstr ""
+msgstr "Сэкстэт Сэйфэрта"
 
 #: nebulae/default/ngc2000names.dat:286
 msgid "Soul nebula"
-msgstr ""
+msgstr "Туманнасьць «Душа»"
 
 #: nebulae/default/ngc2000names.dat:287
 msgid "Southern Integral Sign"
-msgstr ""
+msgstr "Паўднёвы знак інтэґралу"
 
 #: nebulae/default/ngc2000names.dat:288
 msgid "Starfish cluster"
-msgstr ""
+msgstr "Скопішча «Марская зорка»"
 
 #: nebulae/default/ngc2000names.dat:289
 msgid "Superwind-Galaxy"
-msgstr ""
+msgstr "Ґаляктыка-Супэрвецер"
 
 #: nebulae/default/ngc2000names.dat:290
 msgid "Turtle planetary nebula"
-msgstr ""
+msgstr "Плянэтарная туманнасьць «Чарапаха»"
 
 #: skycultures/arabic/constellation_names.eng.fab:1
 msgid "The Shackled Woman"
