--- a/po/stellarium-skycultures/es.po
+++ b/po/stellarium-skycultures/es.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-29 12:20+0700\n"
-"PO-Revision-Date: 2012-12-30 11:09+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2012-12-31 18:38+0000\n"
+"Last-Translator: José A. Macas Durazo <josedurazo92@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-31 04:38+0000\n"
+"X-Launchpad-Export-Date: 2013-01-01 04:44+0000\n"
 "X-Generator: Launchpad (build 16378)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
@@ -466,47 +466,47 @@ msgstr "Galaxia Gran Diseño"
 
 #: nebulae/default/ngc2000names.dat:246
 msgid "Monkey Head nebula"
-msgstr ""
+msgstr "Nebulosa Cabeza de Mono"
 
 #: nebulae/default/ngc2000names.dat:247
 msgid "Lemon slice nebula"
-msgstr ""
+msgstr "Nebulosa Rodaja de Limón"
 
 #: nebulae/default/ngc2000names.dat:248
 msgid "Red spider nebula"
-msgstr ""
+msgstr "Nebulosa de la Araña Roja"
 
 #: nebulae/default/ngc2000names.dat:249
 msgid "Retina nebula"
-msgstr ""
+msgstr "Nebulosa Retina"
 
 #: nebulae/default/ngc2000names.dat:250
 msgid "Spirograph nebula"
-msgstr ""
+msgstr "Nebulosa Espirógrafo"
 
 #: nebulae/default/ngc2000names.dat:251
 msgid "Spiral planetary nebula"
-msgstr ""
+msgstr "Nebulosa planetaria espiral"
 
 #: nebulae/default/ngc2000names.dat:252
 msgid "20 Vulpeculae cluster"
-msgstr ""
+msgstr "Cúmulo 20 Vulpeculae"
 
 #: nebulae/default/ngc2000names.dat:253
 msgid "Ambartsumian's Knot"
-msgstr ""
+msgstr "Nudo de Ambartsumian"
 
 #: nebulae/default/ngc2000names.dat:254
 msgid "Antares nebula"
-msgstr ""
+msgstr "Nebulosa Antares"
 
 #: nebulae/default/ngc2000names.dat:255
 msgid "Auriga Salt-and-Pepper"
-msgstr ""
+msgstr "Messier 37"
 
 #: nebulae/default/ngc2000names.dat:256
 msgid "Baxendall's nebula"
-msgstr ""
+msgstr "Nebulosa Baxendall"
 
 #: nebulae/default/ngc2000names.dat:257
 msgid "Cassiopeia Salt-and-Pepper"
@@ -518,7 +518,7 @@ msgstr "Ballena A"
 
 #: nebulae/default/ngc2000names.dat:259
 msgid "Cleopatra's Eye"
-msgstr ""
+msgstr "Ojo de Cleopatra"
 
 #: nebulae/default/ngc2000names.dat:260
 msgid "Cooling Tower"
@@ -534,11 +534,11 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:263
 msgid "Dragon nebula"
-msgstr ""
+msgstr "Nebulosa Dragón"
 
 #: nebulae/default/ngc2000names.dat:264
 msgid "Dragonfly cluster"
-msgstr ""
+msgstr "Cúmulo Libélula"
 
 #: nebulae/default/ngc2000names.dat:265
 msgid "Elephant Trunk"
@@ -551,7 +551,7 @@ msgstr "Cuarteto Grus"
 
 #: nebulae/default/ngc2000names.dat:270
 msgid "Heart nebula"
-msgstr ""
+msgstr "Nebulosa Corazón"
 
 #: nebulae/default/ngc2000names.dat:271
 msgid "Heart-Shaped cluster"
@@ -612,7 +612,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:288
 msgid "Starfish cluster"
-msgstr ""
+msgstr "Cúmulo Estrella de Mar"
 
 #: nebulae/default/ngc2000names.dat:289
 msgid "Superwind-Galaxy"
@@ -620,7 +620,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:290
 msgid "Turtle planetary nebula"
-msgstr ""
+msgstr "Nebulosa planetaria Tortuga"
 
 #: skycultures/arabic/constellation_names.eng.fab:1
 msgid "The Shackled Woman"
