--- a/po/stellarium/es.po
+++ b/po/stellarium/es.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-27 20:16+0700\n"
-"PO-Revision-Date: 2012-11-26 06:57+0000\n"
+"PO-Revision-Date: 2012-12-31 17:18+0000\n"
 "Last-Translator: José A. Macas Durazo <josedurazo92@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-28 04:46+0000\n"
+"X-Launchpad-Export-Date: 2013-01-01 04:44+0000\n"
 "X-Generator: Launchpad (build 16378)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
@@ -2599,7 +2599,7 @@ msgstr "Añadir 1 año sideral"
 
 #: src/translations.h:507
 msgid "Add 1 sidereal century"
-msgstr ""
+msgstr "Añadir 1 siglo sideral"
 
 #: src/translations.h:508
 msgid "Add 1 solar day"
@@ -2639,7 +2639,7 @@ msgstr "Agregar 1 año trópico"
 
 #: src/translations.h:517
 msgid "Add 1 mean tropical century"
-msgstr ""
+msgstr "Añadir 1 siglo tropical medio"
 
 #: src/translations.h:518
 msgid "Slow down the script execution rate"
@@ -2711,7 +2711,7 @@ msgstr "Restar 1 año sideral"
 
 #: src/translations.h:535
 msgid "Subtract 1 sidereal century"
-msgstr ""
+msgstr "Restar 1 siglo sideral"
 
 #: src/translations.h:536
 msgid "Subtract 1 solar day"
@@ -2751,7 +2751,7 @@ msgstr "Quitar 1 año tropical"
 
 #: src/translations.h:545
 msgid "Subtract 1 mean tropical century"
-msgstr ""
+msgstr "Restar 1 siglo tropical medio"
 
 #. TRANSLATORS: Keyboard action group name
 #: src/translations.h:548
