Launchpad automatic translations update.

--- a/po/stellarium-skycultures/fi.po
+++ b/po/stellarium-skycultures/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-29 12:20+0700\n"
-"PO-Revision-Date: 2012-12-29 14:36+0000\n"
+"PO-Revision-Date: 2013-01-01 20:30+0000\n"
 "Last-Translator: Tuomas Teipainen <tmsteipainen1@gmail.com>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-30 05:12+0000\n"
+"X-Launchpad-Export-Date: 2013-01-02 04:36+0000\n"
 "X-Generator: Launchpad (build 16378)\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -510,7 +510,7 @@ msgstr "Kassiopeian suola ja pippuri"
 
 #: nebulae/default/ngc2000names.dat:258
 msgid "Cetus A"
-msgstr "Valas A"
+msgstr "Cetus A"
 
 #: nebulae/default/ngc2000names.dat:259
 msgid "Cleopatra's Eye"
