Launchpad automatic translations update.

--- a/po/stellarium/it.po
+++ b/po/stellarium/it.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-27 20:16+0700\n"
-"PO-Revision-Date: 2012-12-05 10:15+0000\n"
-"Last-Translator: Guybrush88 <Unknown>\n"
+"PO-Revision-Date: 2013-01-04 15:02+0000\n"
+"Last-Translator: Alessio Di Paola <Unknown>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-28 04:42+0000\n"
-"X-Generator: Launchpad (build 16378)\n"
+"X-Launchpad-Export-Date: 2013-01-05 04:42+0000\n"
+"X-Generator: Launchpad (build 16393)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -568,6 +568,8 @@ msgid ""
 "Below are listed only the actions with assigned keys. Further actions may be "
 "available via the \"%1\" button."
 msgstr ""
+"Di seguito sono elencate soltanto le azioni con i tasti assegnati. Altre "
+"azioni possono essere disponibili tramite il pulsante \"%1\"."
 
 #: src/gui/HelpDialog.cpp:245
 msgid ""
@@ -1466,6 +1468,7 @@ msgstr ""
 #: src/translations.h:241
 msgid "Phobos eclipsing the Sun as seen from Olympus Mons on Jan 10, 2068."
 msgstr ""
+"Phobos sta eclissando il Sole, visto dal Monte Olimpo il 10 Gennaio 2068."
 
 #: src/translations.h:242
 msgid ""
@@ -1473,6 +1476,9 @@ msgid ""
 "occultations of both on the same day are very rare. Here's one that takes "
 "place 1/23/2048. In real speed."
 msgstr ""
+"Le occultazioni di Phobos della Terra sono comuni, così come le occultazioni "
+"di Giove. Ma le occultazioni di entrambi lo stesso giorno sono molto rare. "
+"Ecco quella che si svolge il 23/01/2048. In velocità reale."
 
 #: src/translations.h:243
 msgid ""
@@ -1491,7 +1497,7 @@ msgstr ""
 
 #: src/translations.h:245
 msgid "A tour of the western constellations."
-msgstr ""
+msgstr "Un tour delle costellazioni occidentali."
 
 #: src/translations.h:246
 msgid "Look at the Sun from big planets of Solar System and Pluto."
@@ -1501,22 +1507,28 @@ msgstr "Guarda il Sole dai grandi pianeti del Sistema Solare e Plutone."
 msgid ""
 "Best views of Earth from other Solar System bodies in the 21st Century."
 msgstr ""
+"La vista migliore della Terra da altri corpi del sistema solare nel 21 ° "
+"secolo."
 
 #: src/translations.h:248
 msgid "Transit of Venus as seen from Sydney Australia, 6th June 2012."
-msgstr ""
+msgstr "Transito di Venere,  visto da Sydney (Australia) il 6 Giugno 2012."
 
 #: src/translations.h:249
 msgid ""
 "A demonstration of the analemma - the path of the Sun across the sky during "
 "the year."
 msgstr ""
+"Una dimostrazione dell'analemma - il percorso del Sole nel cielo durante "
+"l'anno."
 
 #: src/translations.h:250
 msgid ""
 "Flash of the supernova observed by Tycho Brahe in 1572. The Supernovae "
 "plugin has to be enabled."
 msgstr ""
+"Lampo della supernova osservata da Tycho Brahe nel 1572. Il plugin "
+"Supernovae deve essere abilitato."
 
 #: src/translations.h:255
 msgid "Andorra"
@@ -2506,7 +2518,7 @@ msgstr "Aggiungi 1 anno siderale"
 
 #: src/translations.h:507
 msgid "Add 1 sidereal century"
-msgstr ""
+msgstr "Aggiungi 1 secolo siderale"
 
 #: src/translations.h:508
 msgid "Add 1 solar day"
