--- a/po/stellarium-skycultures/en_GB.po
+++ b/po/stellarium-skycultures/en_GB.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-29 12:20+0700\n"
-"PO-Revision-Date: 2012-12-30 11:15+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-01-04 09:29+0000\n"
+"Last-Translator: Andi Chandler <Unknown>\n"
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-31 04:38+0000\n"
-"X-Generator: Launchpad (build 16378)\n"
+"X-Launchpad-Export-Date: 2013-01-05 04:42+0000\n"
+"X-Generator: Launchpad (build 16393)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -462,51 +462,51 @@ msgstr "Grand Design galaxy"
 
 #: nebulae/default/ngc2000names.dat:246
 msgid "Monkey Head nebula"
-msgstr ""
+msgstr "Monkey Head nebula"
 
 #: nebulae/default/ngc2000names.dat:247
 msgid "Lemon slice nebula"
-msgstr ""
+msgstr "Lemon slice nebula"
 
 #: nebulae/default/ngc2000names.dat:248
 msgid "Red spider nebula"
-msgstr ""
+msgstr "Red spider nebula"
 
 #: nebulae/default/ngc2000names.dat:249
 msgid "Retina nebula"
-msgstr ""
+msgstr "Retina nebula"
 
 #: nebulae/default/ngc2000names.dat:250
 msgid "Spirograph nebula"
-msgstr ""
+msgstr "Spirograph nebula"
 
 #: nebulae/default/ngc2000names.dat:251
 msgid "Spiral planetary nebula"
-msgstr ""
+msgstr "Spiral planetary nebula"
 
 #: nebulae/default/ngc2000names.dat:252
 msgid "20 Vulpeculae cluster"
-msgstr ""
+msgstr "20 Vulpeculae cluster"
 
 #: nebulae/default/ngc2000names.dat:253
 msgid "Ambartsumian's Knot"
-msgstr ""
+msgstr "Ambartsumian's Knot"
 
 #: nebulae/default/ngc2000names.dat:254
 msgid "Antares nebula"
-msgstr ""
+msgstr "Antares nebula"
 
 #: nebulae/default/ngc2000names.dat:255
 msgid "Auriga Salt-and-Pepper"
-msgstr ""
+msgstr "Auriga Salt-and-Pepper"
 
 #: nebulae/default/ngc2000names.dat:256
 msgid "Baxendall's nebula"
-msgstr ""
+msgstr "Baxendall's nebula"
 
 #: nebulae/default/ngc2000names.dat:257
 msgid "Cassiopeia Salt-and-Pepper"
-msgstr ""
+msgstr "Cassiopeia Salt-and-Pepper"
 
 #: nebulae/default/ngc2000names.dat:258
 msgid "Cetus A"
@@ -514,31 +514,31 @@ msgstr "Cetus A"
 
 #: nebulae/default/ngc2000names.dat:259
 msgid "Cleopatra's Eye"
-msgstr ""
+msgstr "Cleopatra's Eye"
 
 #: nebulae/default/ngc2000names.dat:260
 msgid "Cooling Tower"
-msgstr ""
+msgstr "Cooling Tower"
 
 #: nebulae/default/ngc2000names.dat:261
 msgid "Crowbar galaxy"
-msgstr ""
+msgstr "Crowbar galaxy"
 
 #: nebulae/default/ngc2000names.dat:262
 msgid "Sagittarius Star Cloud"
-msgstr ""
+msgstr "Sagittarius Star Cloud"
 
 #: nebulae/default/ngc2000names.dat:263
 msgid "Dragon nebula"
-msgstr ""
+msgstr "Dragon nebula"
 
 #: nebulae/default/ngc2000names.dat:264
 msgid "Dragonfly cluster"
-msgstr ""
+msgstr "Dragonfly cluster"
 
 #: nebulae/default/ngc2000names.dat:265
 msgid "Elephant Trunk"
-msgstr ""
+msgstr "Elephant Trunk"
 
 #: nebulae/default/ngc2000names.dat:266 nebulae/default/ngc2000names.dat:267
 #: nebulae/default/ngc2000names.dat:268 nebulae/default/ngc2000names.dat:269
@@ -547,23 +547,23 @@ msgstr "Grus Quartet"
 
 #: nebulae/default/ngc2000names.dat:270
 msgid "Heart nebula"
-msgstr ""
+msgstr "Heart nebula"
 
 #: nebulae/default/ngc2000names.dat:271
 msgid "Heart-Shaped cluster"
-msgstr ""
+msgstr "Heart-Shaped cluster"
 
 #: nebulae/default/ngc2000names.dat:272
 msgid "Herring galaxy"
-msgstr ""
+msgstr "Herring galaxy"
 
 #: nebulae/default/ngc2000names.dat:273
 msgid "Hole in a cluster"
-msgstr ""
+msgstr "Hole in a cluster"
 
 #: nebulae/default/ngc2000names.dat:274
 msgid "Intergalactic Wanderer/Tramp"
-msgstr ""
+msgstr "Intergalactic Wanderer/Tramp"
 
 #: nebulae/default/ngc2000names.dat:275 nebulae/default/ngc2000names.dat:276
 msgid "Keenan's System"
@@ -571,16 +571,16 @@ msgstr "Keenan's System"
 
 #: nebulae/default/ngc2000names.dat:277
 msgid "Kidney Bean galaxy"
-msgstr ""
+msgstr "Kidney Bean galaxy"
 
 #: nebulae/default/ngc2000names.dat:278 nebulae/default/ngc2000names.dat:279
 #: nebulae/default/ngc2000names.dat:280
 msgid "Leo Triplet"
-msgstr ""
+msgstr "Leo Triplet"
 
 #: nebulae/default/ngc2000names.dat:281
 msgid "McLeish's Object"
-msgstr ""
+msgstr "McLeish's Object"
 
 #: nebulae/default/ngc2000names.dat:282
 msgid "Miniature Spiral"
@@ -588,35 +588,35 @@ msgstr "Miniature Spiral"
 
 #: nebulae/default/ngc2000names.dat:283
 msgid "Mirach's Ghost"
-msgstr ""
+msgstr "Mirach's Ghost"
 
 #: nebulae/default/ngc2000names.dat:284
 msgid "Sailboat cluster"
-msgstr ""
+msgstr "Sailboat cluster"
 
 #: nebulae/default/ngc2000names.dat:285
 msgid "Seyfert's Sextet"
-msgstr ""
+msgstr "Seyfert's Sextet"
 
 #: nebulae/default/ngc2000names.dat:286
 msgid "Soul nebula"
-msgstr ""
+msgstr "Soul nebula"
 
 #: nebulae/default/ngc2000names.dat:287
 msgid "Southern Integral Sign"
-msgstr ""
+msgstr "Southern Integral Sign"
 
 #: nebulae/default/ngc2000names.dat:288
 msgid "Starfish cluster"
-msgstr ""
+msgstr "Starfish cluster"
 
 #: nebulae/default/ngc2000names.dat:289
 msgid "Superwind-Galaxy"
-msgstr ""
+msgstr "Superwind-Galaxy"
 
 #: nebulae/default/ngc2000names.dat:290
 msgid "Turtle planetary nebula"
-msgstr ""
+msgstr "Turtle planetary nebula"
 
 #: skycultures/arabic/constellation_names.eng.fab:1
 msgid "The Shackled Woman"
