--- a/po/stellarium-skycultures/sv.po
+++ b/po/stellarium-skycultures/sv.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-29 12:20+0700\n"
-"PO-Revision-Date: 2012-12-30 12:02+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-01-05 01:04+0000\n"
+"Last-Translator: Jonas Persson <jonas.persson@physics.org>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-31 04:38+0000\n"
-"X-Generator: Launchpad (build 16378)\n"
+"X-Launchpad-Export-Date: 2013-01-05 04:42+0000\n"
+"X-Generator: Launchpad (build 16393)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -2445,7 +2445,7 @@ msgstr ""
 
 #: skycultures/korean/constellation_names.eng.fab:43
 msgid "Head of Town"
-msgstr ""
+msgstr "Stadens ledare"
 
 #: skycultures/korean/constellation_names.eng.fab:44
 msgid "Build"
