--- a/po/stellarium/de.po
+++ b/po/stellarium/de.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-27 20:16+0700\n"
-"PO-Revision-Date: 2013-01-02 16:36+0000\n"
+"PO-Revision-Date: 2013-01-04 18:19+0000\n"
 "Last-Translator: gzotti <Georg.Zotti@univie.ac.at>\n"
 "Language-Team: <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-03 04:46+0000\n"
+"X-Launchpad-Export-Date: 2013-01-05 04:42+0000\n"
 "X-Generator: Launchpad (build 16393)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -1493,6 +1493,12 @@ msgid ""
 "in the SH) again, then Mars totally eclipses the sun and Phobos, and then as "
 "Phobos emerges from the sun it passes through Mars' shadow and dims."
 msgstr ""
+"Phobos läuft Mars voraus und vor der Sonne vorbei, kehrt dann um und "
+"verdeckt sie teilweise (nur in Vergrößerung sichtbar) abermals. Dann bedeckt "
+"Mars die Sonne vollständig, während Phobos zwischen Mars und Deimos durch "
+"den Schatten des Mars passiert und verfinstert bleibt, wenn er auf der "
+"anderen Seite wieder erkennbar wird. Erst etwas später wird er auch wieder "
+"von der Sonne beleuchtet."
 
 #: src/translations.h:244
 msgid ""
@@ -2510,7 +2516,7 @@ msgstr "Datum und Uhrzeit"
 
 #: src/translations.h:503
 msgid "Add 1 sidereal day"
-msgstr "Addiere 1 Sternenstunde"
+msgstr "1 Stunde Sternzeit vorwärts"
 
 #: src/translations.h:504
 msgid "Add 1 sidereal month"
@@ -2518,7 +2524,7 @@ msgstr "1 siderischen Monat vorwärts"
 
 #: src/translations.h:505
 msgid "Add 1 sidereal week"
-msgstr "Addiere 1 Sternenwoche"
+msgstr "1 Woche Sternzeit vorwärts"
 
 #: src/translations.h:506
 msgid "Add 1 sidereal year"
@@ -2526,19 +2532,19 @@ msgstr "1 siderisches Jahr vorwärts"
 
 #: src/translations.h:507
 msgid "Add 1 sidereal century"
-msgstr ""
+msgstr "100 siderische Jahre vorwärts"
 
 #: src/translations.h:508
 msgid "Add 1 solar day"
-msgstr "Addiere 1 Sonnentag"
+msgstr "1 Sonnentag vorwärts"
 
 #: src/translations.h:509
 msgid "Add 1 solar hour"
-msgstr "Addiere 1 Sonnenstunde"
+msgstr "1 Stunde vorwärts"
 
 #: src/translations.h:510
 msgid "Add 1 solar week"
-msgstr "Addiere 1 Sonnenwoche"
+msgstr "1 Woche vorwärts"
 
 #: src/translations.h:511
 msgid "Add 1 synodic month"
@@ -2578,7 +2584,7 @@ msgstr "Zeitablauf verlangsamen"
 
 #: src/translations.h:520
 msgid "Decrease time speed (a little)"
-msgstr "Zeitablauf verlangsamen (gering)"
+msgstr "Zeitablauf ein wenig verlangsamen"
 
 #: src/translations.h:521
 msgid "Speed up the script execution rate"
@@ -2590,7 +2596,7 @@ msgstr "Zeitablauf beschleunigen"
 
 #: src/translations.h:523
 msgid "Increase time speed (a little)"
-msgstr "Zeitablauf beschleunigen (gering)"
+msgstr "Zeitablauf ein wenig beschleunigen"
 
 #: src/translations.h:524
 msgid "Pause script execution"
@@ -2622,7 +2628,7 @@ msgstr "Skript-Ausführung anhalten"
 
 #: src/translations.h:531
 msgid "Subtract 1 sidereal day"
-msgstr "Subtrahiere 1 Sternentag"
+msgstr "1 Sterntag zurück"
 
 #: src/translations.h:532
 msgid "Subtract 1 sidereal month"
@@ -2630,7 +2636,7 @@ msgstr "1 siderischen Monat zurück"
 
 #: src/translations.h:533
 msgid "Subtract 1 sidereal week"
-msgstr "Subtrahiere 1 Sternenwoche"
+msgstr "1 Woche Sternzeit zurück"
 
 #: src/translations.h:534
 msgid "Subtract 1 sidereal year"
@@ -2638,31 +2644,31 @@ msgstr "1 siderisches Jahr zurück"
 
 #: src/translations.h:535
 msgid "Subtract 1 sidereal century"
-msgstr ""
+msgstr "100 siderische Jahre zurück"
 
 #: src/translations.h:536
 msgid "Subtract 1 solar day"
-msgstr "Subtrahiere 1 Sonnentag"
+msgstr "1 Tag zurück"
 
 #: src/translations.h:537
 msgid "Subtract 1 solar hour"
-msgstr "Subtrahiere 1 Sonnenstunde"
+msgstr "1 Stunde zurück"
 
 #: src/translations.h:538
 msgid "Subtract 1 solar week"
-msgstr "Subtrahiere 1 Sonnenwoche"
+msgstr "1 Woche zurück"
 
 #: src/translations.h:539
 msgid "Subtract 1 synodic month"
-msgstr "1 Synodisches Monat zurück"
+msgstr "1 Synodischen Monat zurück"
 
 #: src/translations.h:540
 msgid "Subtract 1 draconic month"
-msgstr "1 Drakonitisches Monat zurück"
+msgstr "1 Drakonitischen Monat zurück"
 
 #: src/translations.h:541
 msgid "Subtract 1 anomalistic month"
-msgstr "1 Anomalistisches Monat zurück"
+msgstr "1 Anomalistischen Monat zurück"
 
 #: src/translations.h:542
 msgid "Subtract 1 mean tropical month"
@@ -2720,7 +2726,7 @@ msgstr "Sternbildgrenzen"
 #: src/translations.h:556
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:280
 msgid "Constellation labels"
-msgstr "Sternbildbeschriftungen"
+msgstr "Sternbildbezeichnungen"
 
 #: src/translations.h:557
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:275
@@ -2757,7 +2763,7 @@ msgstr "Äquatoriales Koordinatennetz (J2000)"
 
 #: src/translations.h:564
 msgid "Fog"
-msgstr "Nebel"
+msgstr "Bodennebel"
 
 #: src/translations.h:565 src/ui_viewDialog.h:1160
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:361
@@ -2793,7 +2799,7 @@ msgstr "Nachtmodus"
 #: src/translations.h:572
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:304
 msgid "Planet labels"
-msgstr "Planetenbeschriftungen"
+msgstr "Planetenbezeichnungen"
 
 #: src/translations.h:573
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:308
@@ -2803,7 +2809,7 @@ msgstr "Planetenbahnen"
 #: src/translations.h:574
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:312
 msgid "Planet trails"
-msgstr "Planetenbahnen"
+msgstr "Planetenspuren"
 
 #: src/translations.h:575 src/ui_viewDialog.h:1121 src/ui_viewDialog.h:1143
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:241
