--- a/po/stellarium/en_GB.po
+++ b/po/stellarium/en_GB.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-27 20:16+0700\n"
-"PO-Revision-Date: 2012-11-19 18:48+0000\n"
+"PO-Revision-Date: 2013-01-04 09:25+0000\n"
 "Last-Translator: Andi Chandler <Unknown>\n"
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-28 04:48+0000\n"
-"X-Generator: Launchpad (build 16378)\n"
+"X-Launchpad-Export-Date: 2013-01-05 04:42+0000\n"
+"X-Generator: Launchpad (build 16393)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -2514,7 +2514,7 @@ msgstr "Add 1 sidereal year"
 
 #: src/translations.h:507
 msgid "Add 1 sidereal century"
-msgstr ""
+msgstr "Add 1 sidereal century"
 
 #: src/translations.h:508
 msgid "Add 1 solar day"
@@ -2554,7 +2554,7 @@ msgstr "Add 1 mean tropical year"
 
 #: src/translations.h:517
 msgid "Add 1 mean tropical century"
-msgstr ""
+msgstr "Add 1 mean tropical century"
 
 #: src/translations.h:518
 msgid "Slow down the script execution rate"
@@ -2626,7 +2626,7 @@ msgstr "Subtract 1 sidereal year"
 
 #: src/translations.h:535
 msgid "Subtract 1 sidereal century"
-msgstr ""
+msgstr "Subtract 1 sidereal century"
 
 #: src/translations.h:536
 msgid "Subtract 1 solar day"
@@ -2666,7 +2666,7 @@ msgstr "Subtract 1 mean tropical year"
 
 #: src/translations.h:545
 msgid "Subtract 1 mean tropical century"
-msgstr ""
+msgstr "Subtract 1 mean tropical century"
 
 #. TRANSLATORS: Keyboard action group name
 #: src/translations.h:548
@@ -6626,23 +6626,23 @@ msgstr "Update exoplanets data from Internet"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:260
 msgid "Display mode for exoplanets"
-msgstr ""
+msgstr "Display mode for exoplanets"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:262
 msgid "Plot all systems with exoplanets without labels"
-msgstr ""
+msgstr "Plot all systems with exoplanets without labels"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:264
 msgid "Enable display of distribution for exoplanets"
-msgstr ""
+msgstr "Enable display of distribution for exoplanets"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:266
 msgid "Display exoplanets since their discovery"
-msgstr ""
+msgstr "Display exoplanets since their discovery"
 
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:268
 msgid "Enable timeline discovery of exoplanets"
-msgstr ""
+msgstr "Enable timeline discovery of exoplanets"
 
 #: plugins/Observability/src/Observability.cpp:66
 msgid "Observability analysis"
