--- a/po/stellarium/stellarium.pot
+++ b/po/stellarium/stellarium.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-01-06 01:32+0700\n"
+"POT-Creation-Date: 2013-01-06 01:47+0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -4398,7 +4398,7 @@ msgid "International Designator"
 msgstr ""
 
 #: plugins/Satellites/src/Satellite.cpp:244
-msgid "artifical satellite"
+msgid "artificial satellite"
 msgstr ""
 
 #. TRANSLATORS: Slant range: distance between the satellite and the observer
