Launchpad automatic translations update.

--- a/po/stellarium-skycultures/nb.po
+++ b/po/stellarium-skycultures/nb.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-29 12:20+0700\n"
-"PO-Revision-Date: 2012-12-30 11:14+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-01-06 20:31+0000\n"
+"Last-Translator: FreewareTips <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-31 04:38+0000\n"
-"X-Generator: Launchpad (build 16378)\n"
+"X-Launchpad-Export-Date: 2013-01-07 04:42+0000\n"
+"X-Generator: Launchpad (build 16402)\n"
 "X-Poedit-Country: NORWAY\n"
 "X-Poedit-Language: Norwegian\n"
 
@@ -493,7 +493,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:253
 msgid "Ambartsumian's Knot"
-msgstr ""
+msgstr "Ambartsumians knute"
 
 #: nebulae/default/ngc2000names.dat:254
 msgid "Antares nebula"
@@ -501,7 +501,7 @@ msgstr "Antareståken"
 
 #: nebulae/default/ngc2000names.dat:255
 msgid "Auriga Salt-and-Pepper"
-msgstr ""
+msgstr "Auriga salt og pepper"
 
 #: nebulae/default/ngc2000names.dat:256
 msgid "Baxendall's nebula"
@@ -509,7 +509,7 @@ msgstr "Baxendalls tåke"
 
 #: nebulae/default/ngc2000names.dat:257
 msgid "Cassiopeia Salt-and-Pepper"
-msgstr ""
+msgstr "Kassiopeia salt og pepper"
 
 #: nebulae/default/ngc2000names.dat:258
 msgid "Cetus A"
@@ -521,7 +521,7 @@ msgstr "Kleopatras øye"
 
 #: nebulae/default/ngc2000names.dat:260
 msgid "Cooling Tower"
-msgstr ""
+msgstr "Kjøletårn"
 
 #: nebulae/default/ngc2000names.dat:261
 msgid "Crowbar galaxy"
@@ -541,7 +541,7 @@ msgstr "Øyenstikkerhopen"
 
 #: nebulae/default/ngc2000names.dat:265
 msgid "Elephant Trunk"
-msgstr ""
+msgstr "Elefantsnabel"
 
 #: nebulae/default/ngc2000names.dat:266 nebulae/default/ngc2000names.dat:267
 #: nebulae/default/ngc2000names.dat:268 nebulae/default/ngc2000names.dat:269
@@ -579,11 +579,11 @@ msgstr "Kidneybønne-galaksen"
 #: nebulae/default/ngc2000names.dat:278 nebulae/default/ngc2000names.dat:279
 #: nebulae/default/ngc2000names.dat:280
 msgid "Leo Triplet"
-msgstr ""
+msgstr "Leo-tripletten"
 
 #: nebulae/default/ngc2000names.dat:281
 msgid "McLeish's Object"
-msgstr ""
+msgstr "McLeishs objekt"
 
 #: nebulae/default/ngc2000names.dat:282
 msgid "Miniature Spiral"
@@ -607,7 +607,7 @@ msgstr "Sjelståken"
 
 #: nebulae/default/ngc2000names.dat:287
 msgid "Southern Integral Sign"
-msgstr ""
+msgstr "Sydlige integraltegn"
 
 #: nebulae/default/ngc2000names.dat:288
 msgid "Starfish cluster"
