--- a/po/stellarium/pt_BR.po
+++ b/po/stellarium/pt_BR.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-06 01:47+0700\n"
-"PO-Revision-Date: 2013-01-05 19:14+0000\n"
+"PO-Revision-Date: 2013-01-07 02:01+0000\n"
 "Last-Translator: Adriano Steffler <Unknown>\n"
 "Language-Team: Portuguese (Brazil) <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-06 04:43+0000\n"
-"X-Generator: Launchpad (build 16393)\n"
+"X-Launchpad-Export-Date: 2013-01-07 04:41+0000\n"
+"X-Generator: Launchpad (build 16402)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -88,27 +88,27 @@ msgstr "Grandeza: %1"
 
 #: src/core/modules/Nebula.cpp:342
 msgid "Galaxy"
-msgstr "Galáxia"
+msgstr "galáxia"
 
 #: src/core/modules/Nebula.cpp:345
 msgid "Open cluster"
-msgstr "Aglomerado de estrelas aberto"
+msgstr "aglomerado de estrelas aberto"
 
 #: src/core/modules/Nebula.cpp:348
 msgid "Globular cluster"
-msgstr "Aglomerado globular"
+msgstr "aglomerado globular"
 
 #: src/core/modules/Nebula.cpp:351
 msgid "Nebula"
-msgstr "Nebulosa"
+msgstr "nebulosa"
 
 #: src/core/modules/Nebula.cpp:354
 msgid "Planetary nebula"
-msgstr "Nebulosa planetária"
+msgstr "nebulosa planetária"
 
 #: src/core/modules/Nebula.cpp:357
 msgid "Cluster associated with nebulosity"
-msgstr "Aglomerado associado a nebulosidade"
+msgstr "aglomerado associado a nebulosidade"
 
 #: src/core/modules/Nebula.cpp:360
 msgid "Unknown"
@@ -6260,7 +6260,7 @@ msgstr ""
 
 #: plugins/Supernovae/src/Supernova.cpp:97
 msgid "supernova"
-msgstr "Supernova"
+msgstr "supernova"
 
 #: plugins/Supernovae/src/Supernova.cpp:113
 #, qt-format
@@ -6390,7 +6390,7 @@ msgstr ""
 
 #: plugins/Quasars/src/Quasar.cpp:92
 msgid "quasar"
-msgstr "Quasar"
+msgstr "quasar"
 
 #: plugins/Quasars/src/Quasar.cpp:134
 #, qt-format
