--- a/po/stellarium-skycultures/zh_CN.po
+++ b/po/stellarium-skycultures/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-29 12:20+0700\n"
-"PO-Revision-Date: 2012-12-30 11:18+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-01-06 15:01+0000\n"
+"Last-Translator: 罗佳伟 <luojiaweil@gmail.com>\n"
 "Language-Team: Chinese (China) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-31 04:39+0000\n"
-"X-Generator: Launchpad (build 16378)\n"
+"X-Launchpad-Export-Date: 2013-01-07 04:42+0000\n"
+"X-Generator: Launchpad (build 16402)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -179,7 +179,7 @@ msgstr "螺旋星云"
 
 #: nebulae/default/ngc2000names.dat:163
 msgid "Hind's variable nebula"
-msgstr "欣德变星云"
+msgstr "欣德变光星云"
 
 #: nebulae/default/ngc2000names.dat:164
 msgid "Horsehead nebula"
@@ -191,7 +191,7 @@ msgstr "沙漏星云"
 
 #: nebulae/default/ngc2000names.dat:166
 msgid "Hubble's variable nebula"
-msgstr ""
+msgstr "哈勃变光星云"
 
 #: nebulae/default/ngc2000names.dat:167
 msgid "Jewel Box"
@@ -370,7 +370,7 @@ msgstr "半人马座λ星云"
 
 #: nebulae/default/ngc2000names.dat:223
 msgid "ω Cen cluster"
-msgstr ""
+msgstr "半人马ω星云"
 
 #: nebulae/default/ngc2000names.dat:224
 msgid "ρ Oph nebula"
@@ -410,7 +410,7 @@ msgstr "天炉座 B"
 
 #: nebulae/default/ngc2000names.dat:233
 msgid "de Mairan's nebula"
-msgstr ""
+msgstr "迪马伦星云"
 
 #: nebulae/default/ngc2000names.dat:234
 msgid "Flame nebula"
@@ -418,7 +418,7 @@ msgstr "火焰星云"
 
 #: nebulae/default/ngc2000names.dat:235
 msgid "Satellite cluster"
-msgstr ""
+msgstr "卫星星云"
 
 #: nebulae/default/ngc2000names.dat:236
 msgid "Thor's Helmet"
@@ -426,11 +426,11 @@ msgstr "雷神的头盔"
 
 #: nebulae/default/ngc2000names.dat:237
 msgid "Caroline's cluster"
-msgstr ""
+msgstr "卡罗琳星团"
 
 #: nebulae/default/ngc2000names.dat:238
 msgid "τ Canis Majoris cluster"
-msgstr ""
+msgstr "大犬座τ星云"
 
 #: nebulae/default/ngc2000names.dat:239
 msgid "Pencil nebula"
@@ -454,39 +454,39 @@ msgstr "风车星系"
 
 #: nebulae/default/ngc2000names.dat:244
 msgid "Atoms for Peace galaxy"
-msgstr ""
+msgstr "和平利用原子能星系"
 
 #: nebulae/default/ngc2000names.dat:245
 msgid "Grand Design galaxy"
-msgstr ""
+msgstr "大设计星系"
 
 #: nebulae/default/ngc2000names.dat:246
 msgid "Monkey Head nebula"
-msgstr ""
+msgstr "猴头星系"
 
 #: nebulae/default/ngc2000names.dat:247
 msgid "Lemon slice nebula"
-msgstr ""
+msgstr "柠檬切片星云"
 
 #: nebulae/default/ngc2000names.dat:248
 msgid "Red spider nebula"
-msgstr ""
+msgstr "红蜘蛛星云"
 
 #: nebulae/default/ngc2000names.dat:249
 msgid "Retina nebula"
-msgstr ""
+msgstr "视网膜星云"
 
 #: nebulae/default/ngc2000names.dat:250
 msgid "Spirograph nebula"
-msgstr ""
+msgstr "呼吸器星云"
 
 #: nebulae/default/ngc2000names.dat:251
 msgid "Spiral planetary nebula"
-msgstr ""
+msgstr "螺旋行星星云"
 
 #: nebulae/default/ngc2000names.dat:252
 msgid "20 Vulpeculae cluster"
-msgstr ""
+msgstr "狐狸座20星云"
 
 #: nebulae/default/ngc2000names.dat:253
 msgid "Ambartsumian's Knot"
