--- a/po/stellarium/ca.po
+++ b/po/stellarium/ca.po
@@ -11,14 +11,14 @@ msgstr ""
 "Project-Id-Version: ca\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-06 01:47+0700\n"
-"PO-Revision-Date: 2012-10-24 19:00+0000\n"
-"Last-Translator: Joan Salvat <jsalvat@hotmail.com>\n"
+"PO-Revision-Date: 2013-01-06 18:10+0000\n"
+"Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Català <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-06 04:33+0000\n"
-"X-Generator: Launchpad (build 16393)\n"
+"X-Launchpad-Export-Date: 2013-01-07 04:40+0000\n"
+"X-Generator: Launchpad (build 16402)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -206,7 +206,7 @@ msgstr "Nomenament provisional: %1"
 #: src/core/modules/StarWrapper.cpp:52 src/core/modules/StarWrapper.cpp:122
 #: src/translations.h:151
 msgid "star"
-msgstr ""
+msgstr "estrella"
 
 #: src/core/modules/StarWrapper.cpp:57
 #, qt-format
@@ -1243,17 +1243,17 @@ msgstr "O"
 #. TRANSLATORS: Type of object
 #: src/translations.h:153
 msgid "planet"
-msgstr ""
+msgstr "planeta"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:155
 msgid "comet"
-msgstr ""
+msgstr "cometa"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:157
 msgid "asteroid"
-msgstr ""
+msgstr "asteroide"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:159
